# papers-scrapper-agent

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_paper_agent.py
src/papers2code/: config.py  graph.py  state.py
src/papers2code/llm/: openai_client.py
src/papers2code/nodes/: code_synthesizer.py  dataset_mention_extractor.py  dataset_resolver.py  methods_extractor.py  selector.py  wiki_composer.py
src/papers2code/templates/: Makefile.j2  README.md.j2  config.yaml.j2  environment.yml.j2  model.py.j2  preprocess.py.j2  train.py.j2
src/papers2code/tools/: cifar_adapter.py  image_eda.py  image_profiler.py  image_sampler.py  kaggle_client.py  modality.py  pdf_loader.py
